--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,19 +1,21 @@
 {% extends "base.html" %}
 {% block content %}
-<img src="{{ url_for('static', filename='train.svg') }}"/>
-<div id="just-a-slider" class="dragdealer">
-	<div class="handle red-bar">
-		<span class="value"></span>%
+<div id="everything">
+	<img src="{{ url_for('static', filename='train.svg') }}"/>
+	<div id="just-a-slider" class="trainControl dragdealer">
+		<div class="trainControl handle red-bar">
+			<span class="trainControl value"></span>%
+		</div>
 	</div>
-</div>
-<div class="btn-group btn-45px" data-toggle="buttons-radio">
-  <button class="btn btn-mini btn-off">Forward</button>  
-  <button class="btn btn-mini active last-child">Reverse</button>
-  <div class="selector"></div>
-</div>
-<div class="btn-group btn-45px" data-toggle="buttons-radio">
-  <button class="btn btn-mini btn-off">On</button>  
-  <button class="btn btn-mini active last-child">Off</button>
-  <div class="selector"></div>
+	<div class="btn-group btn-45px" data-toggle="buttons-radio">
+		<button id="forward" class="btn btn-mini btn-off">Forward</button>  
+		<button id="reverse" class="btn btn-mini active last-child">Reverse</button>
+		<div class="selector"></div>
+	</div>
+	<div class="btn-group btn-45px" data-toggle="buttons-radio">
+		<button id="on" class="btn btn-mini btn-off">On</button>  
+		<button id="off" class="btn btn-mini active last-child">Off</button>
+		<div class="selector"></div>
+	</div>
 </div>
 {% endblock %}
