--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,15 +7,7 @@
 			<span class="trainControl value"></span>%
 		</div>
 	</div>
-	<div class="btn-group btn-45px" data-toggle="buttons-radio">
-		<button id="forward" class="btn btn-mini btn-off">Forward</button>  
-		<button id="reverse" class="btn btn-mini active last-child">Reverse</button>
-		<div class="selector"></div>
-	</div>
-	<div class="btn-group btn-45px" data-toggle="buttons-radio">
-		<button id="on" class="btn btn-mini btn-off">On</button>  
-		<button id="off" class="btn btn-mini active last-child">Off</button>
-		<div class="selector"></div>
-	</div>
+	<input id="forwardReverse" type="checkbox"><br>
+	<input id="stopGo" type="checkbox"><br>
 </div>
 {% endblock %}
