--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,7 +7,6 @@
 			<span class="trainControl value"></span>%
 		</div>
 	</div>
-	<input id="forwardReverse" type="checkbox"><br>
-	<input id="stopGo" type="checkbox"><br>
+	<input id="direction" class="forward" type="button"><br>
 </div>
 {% endblock %}
