--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,12 +1,10 @@
 {% extends "base.html" %}
 {% block content %}
 <div id="everything">
-	<img src="{{ url_for('static', filename='train.svg') }}"/>
-	<div id="just-a-slider" class="trainControl dragdealer">
+	<div id="just-a-slider" style="height:400px; width:100px;" class="trainControl dragdealer">
 		<div class="trainControl handle red-bar">
 			<span class="trainControl value"></span>%
 		</div>
 	</div>
-	<input id="direction" class="forward" type="button"><br>
 </div>
 {% endblock %}
