--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,10 +1,11 @@
 {% extends "base.html" %}
 {% block content %}
 <div id="everything">
-	<div id="just-a-slider" style="height:580px; width:100px;" class="trainControl dragdealer">
+	<div id="just-a-slider" style="height:400px; width:100px;" class="trainControl dragdealer">
 		<div class="trainControl handle red-bar">
 			<span class="trainControl value"></span>%
 		</div>
 	</div>
+	<input id="direction" class="forward" type="button"><br>
 </div>
 {% endblock %}
