--- a/app/static/dragdealer.css
+++ b/app/static/dragdealer.css
@@ -8,8 +8,11 @@
 
 .dragdealer {
   position: relative;
-  height: 30px;
-  background: #EEE;
+  background: #d0695e;
+  height:400px;
+  width:50px;
+  position:relative;
+  left: -15px;
 }
 .dragdealer .handle {
   position: absolute;
@@ -18,9 +21,9 @@
   cursor: pointer;
 }
 .dragdealer .red-bar {
-  width: 100px;
+  width: 50px;
   height: 30px;
-  background: #CC0000;
+  background: #6a2820;
   color: #FFF;
   font-size: 14px;
   line-height: 30px;
@@ -28,4 +31,63 @@
 }
 .dragdealer .disabled {
   background: #898989;
+}
+
+.bolt-top-left{
+  background-color: #858c90;
+  height: 10px;
+  width: 10px;
+  border-radius: 20px;
+  position: relative;
+  top: -5px;
+}
+
+.bolt-top-right{
+  background-color: #858c90;
+  height: 10px;
+  width: 10px;
+  border-radius: 20px;
+  float: right;
+  margin-top: -15px;
+}
+
+.bolt-bottom-left{
+  background-color: #858c90;
+  height: 10px;
+  width: 10px;
+  border-radius: 20px;
+  position: relative;
+  top: 407px;
+}
+
+.bolt-bottom-right{
+  background-color: #858c90;
+  height: 10px;
+  width: 10px;
+  border-radius: 20px;
+  float: right;
+  margin-top: -15px;
+  position: relative;
+  top: 22px;
+  left: -9px;
+}
+.circle{
+  width: 45px;
+  height: 45px;
+  background-color: #6a2820;
+  border-radius: 30px;
+  position: relative;
+  top: -39px;
+  right: -37px;
+}
+.speed{
+  padding: 2px;
+  position: relative;
+  top: 15px;
+  height: 373px;
+}
+
+.logo{
+  width: 100%;
+  max-width: 160px;
 }
