--- a/app/static/train.css
+++ b/app/static/train.css
@@ -1,5 +1,82 @@
-body, html{height:100%;}
+*{
+	margin: 0px;
+	padding: 0px;
+  
+  /*This disables a brief flash when tapping*/
+  -webkit-tap-highlight-color: rgba(0,0,0,0); 
+}
 
-div.everything {height:100%, overflow:hidden;}
+html, body{
+	width: 100%;
+	height: 100%;
+	background: #999;
+	color: #000;
+  overflow: hidden;
+}
 
-body {overflow:hidden; }
+canvas#front{
+	position: relative;
+	top: 0px;
+	left: 0px;
+}
+
+canvas#back{
+	position: absolute;
+	top: 0px;
+	left: 0px;
+}
+
+
+/*Keep the cursor looking like a pointer 
+whether or not it is being dragged*/
+canvas, canvas:active { 
+  cursor: pointer;
+}
+
+.unselectable {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+th, tr, td{
+  border: solid 1px #000;
+}
+
+#show_speed{
+	position:relative;
+	top:-29vh;
+}
+
+#direction{
+	position:relative;
+	top:70px;
+	width:150px;
+	height:70px;
+	background:#55cc55;
+}
+
+#tab{
+	position:relative;
+	left:38px;
+	width:75px;
+	height:70px;
+	background:#FF3333;
+	transition: left 0.5s;
+}
+
+#forward{
+	position:absolute;
+	float:left;
+	top:25px;
+	left:12px;
+}
+
+#reverse{
+	position:absolute;
+	float:right;
+	top:25px;
+	left:85px;
+}
+
