--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,43 +1,13 @@
 {% extends "base.html" %}
 {% block content %}
-<div id="everything">
-	<div class="row" style="max-width: 400px; background-color: #cbd2d8; padding: 20px;height: 390px;">
-		<div class="bolt-top-left">
+	<canvas id='back' class='unselectable'></canvas>
+	<canvas id='front' class='unselectable'></canvas>
+	<center><div id='show_speed'><span id="speed"></span>%</div></center>
+	<center>
+		<div id='direction'>
+			<div id="forward">Forward</div>
+			<div id="reverse">Reverse</div>
+			<div id='tab'></div>
 		</div>
-		<div class="bolt-top-right">
-		</div>
-	  <div class="large-10 small-10 columns" style="background-color: #858c90; height:330px;">
-
-			<div class="row">
-			  <div class="large-10 small-10 columns">
-					<img class="logo" src="{{ url_for('static', filename='logo.png') }}" >
-					<img class="jtc" src="{{ url_for('static', filename='controller.png') }}" >
-					<img class="direction" src="{{ url_for('static', filename='direction.png') }}" >
-					<div class="forward-toggle"></div>
-					<div class="reverse-toggle hide"></div>
-				</div>
-			  <div class="large-2 small-2 columns" style="padding: 0px;">
-					<div class="speed-click">
-						<img class="speed" src="{{ url_for('static', filename='speed.png') }}">
-					</div>
-				</div>
-
-			</div>
-
-		</div>
-	  <div class="large-2 small-2 columns">
-			<div id="just-a-slider" class="trainControl dragdealer">
-				<div class="trainControl handle red-bar">
-					<span class="trainControl value"></span>%
-					<div class="circle">
-				</div>
-				</div>
-			</div>
-		</div>
-		<div class="bolt-bottom-left"></div>
-		<div class="bolt-bottom-right"></div>
-	</div>
-</div>
-
-<input id="direction" class="forward" type="button" style="display:none;"><br>
+	</center>
 {% endblock %}
